--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.13</version>
+        </dependency>
     </dependencies>
 
 </project>
